feature: herois escolhem qual a arma mais forte para atacar;