@@ -2,6 +2,7 @@ package Jogo;
 
 import Jogo.Herois.*;
 import Jogo.Monstros.*;
+import Jogo.enums.TipoArma;
 import Jogo.enums.TipoDificuldade;
 
 import java.util.ArrayList;
@@ -88,7 +89,7 @@ public class Turno {
     private Monstro escolherMonstroMenorVida(List<Monstro> monstros) throws Exception {
         if (monstros.isEmpty()) throw new Exception();
 
-        Monstro alvo = monstros.get(0);
+        Monstro alvo = monstros.getFirst();
         for (Monstro monstro : monstros) if (monstro.getVida() < alvo.getVida()) alvo = monstro;
         return alvo;
     }
@@ -96,8 +97,11 @@ public class Turno {
     private Heroi escolherHeroiMenorVida(List<Heroi> herois) throws Exception {
         if (herois.isEmpty()) throw new Exception();
 
-        Heroi alvo = herois.get(0);
+        Heroi alvo = herois.getFirst();
         for (Heroi heroi : herois) if (heroi.getVida() < alvo.getVida()) alvo = heroi;
         return alvo;
     }
+
 }
+
+
